{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 8,
  "lineage": "de308d52-6fe8-3ab3-7ead-d30b2ae909fa",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "sonarqube-static-ip-address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.175.9.15",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-11-16T03:39:23.987-08:00",
            "id": "projects/test-jorge-367510/regions/europe-southwest1/addresses/sonarqube-static-ip-address",
            "name": "sonarqube-static-ip-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "test-jorge-367510",
            "region": "europe-southwest1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-jorge-367510/regions/europe-southwest1/addresses/sonarqube-static-ip-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "sonarqube_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-16T03:39:35.406-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-jorge-367510/global/firewalls/default-sonarqube-firewall",
            "log_config": [],
            "name": "default-sonarqube-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/test-jorge-367510/global/networks/sonarqube-vpc",
            "priority": 1002,
            "project": "test-jorge-367510",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-jorge-367510/global/firewalls/default-sonarqube-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.sonarqube_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-16T03:39:35.533-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-jorge-367510/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/test-jorge-367510/global/networks/sonarqube-vpc",
            "priority": 1000,
            "project": "test-jorge-367510",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-jorge-367510/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.sonarqube_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "sonarqube_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/test-jorge-367510/zones/europe-southwest1-a/disks/sonarqube-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/test-jorge-367510/zones/europe-southwest1-a/instances/sonarqube-vm",
            "instance_id": "8274891202060972768",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "nDaWlUDXj7E=",
            "metadata_startup_script": "#! /bin/bash\n\nwhite='\\e[1;37m'\ngreen='\\e[1;32m'\n\necho -e \"${green}Updating repositories...\"\necho -e \"${white}\"\nsudo apt-get update\n\necho -e \"${green}Setting proper system limits for SonarQube...\"\necho -e \"${white}\"\nsudo bash -c 'cat \u003e /etc/sysctl.d/99-sonarqube.conf' \u003c\u003c EOF \nvm.max_map_count=524288\nfs.file-max=131072\nEOF\nsudo sysctl -w vm.max_map_count=524288\nsudo sysctl -w fs.file-max=131072\n\necho -e \"${green}In [...]
            "name": "sonarqube-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.175.9.15",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/test-jorge-367510/global/networks/sonarqube-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/test-jorge-367510/regions/europe-southwest1/subnetworks/sonarqube-subnet",
                "subnetwork_project": "test-jorge-367510"
              }
            ],
            "project": "test-jorge-367510",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-jorge-367510/zones/europe-southwest1-a/instances/sonarqube-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "europe-southwest1-a"
          },
          "dependencies": [
            "google_compute_address.sonarqube-static-ip-address",
            "google_compute_network.sonarqube_vpc_network",
            "google_compute_subnetwork.sonarqube_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "sonarqube_vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/test-jorge-367510/global/networks/sonarqube-vpc",
            "mtu": 1460,
            "name": "sonarqube-vpc",
            "project": "test-jorge-367510",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-jorge-367510/global/networks/sonarqube-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sonarqube_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-16T03:39:36.398-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/test-jorge-367510/regions/europe-southwest1/subnetworks/sonarqube-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "sonarqube-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/test-jorge-367510/global/networks/sonarqube-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "test-jorge-367510",
            "purpose": "PRIVATE",
            "region": "europe-southwest1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-jorge-367510/regions/europe-southwest1/subnetworks/sonarqube-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.sonarqube_vpc_network"
          ]
        }
      ]
    }
  ]
}